deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: markerbotweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: markerbotweb-ip
  labels:
    app: markerbot
spec:
  backend:
    serviceName: markerbot-backend
    servicePort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: markerbot-backend
  labels:
    app: markerbot
spec:
  type: NodePort
  selector:
    app: markerbot
    tier: web
  ports:
  - port: 5000
    targetPort: 5000
